tests/functional/lang/eval-fail-bitOr-1.err.exp
error:
       … while calling the 'bitOr' builtin
         at /pwd/lang/eval-fail-bitOr-1.nix:1:1:
            1| builtins.bitOr 1.1 2
             | ^
            2|

       … while evaluating the first argument passed to builtins.bitOr

       error: expected an integer but found a float: 1.1
